--- a/src/lib/components/style-placeholder.css
+++ b/src/lib/components/style-placeholder.css
@@ -1,23 +1,22 @@
-.button-test {
+/**
+ * Boilerplate from example 
+ */
+
+/* Boilerplate from example */
+.top-navbar-mobile-preview button,
+.top-navbar-button {
   position: relative;
-  background-color: #4caf50;
   border: none;
-  font-size: 28px;
-  color: #ffffff;
-  padding: 20px;
   width: 200px;
-  text-align: center;
-  -webkit-transition-duration: 0.4s; /* Safari */
   transition-duration: 0.4s;
-  text-decoration: none;
   overflow: hidden;
-  cursor: pointer;
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.button-test:after {
+/* Example wonky click animation */
+.top-navbar-mobile-preview button:after,
+.top-navbar-button:after {
   content: '';
-  background: #f1f1f1;
+  background: var(--top-navbar-button-anim-color);
   display: block;
   position: absolute;
   padding-top: 300%;
@@ -26,11 +25,96 @@
   margin-top: -120%;
   opacity: 0;
   transition: all 0.8s;
+  border-radius: 100px;
 }
-
-.button-test:active:after {
+.top-navbar-mobile-preview button:active:after,
+.top-navbar-button:active:after {
   padding: 0;
   margin: 0;
   opacity: 1;
   transition: 0s;
+}
+
+/***********
+ * New code
+ **********/
+
+/**
+ * Button 
+ */
+:root {
+  --top-navbar-sprite-size: 50px;
+  --top-navbar-bg-color: black;
+  --top-navbar-text-color: #ddd;
+  --top-navbar-button-bg-color: #444;
+  --top-navbar-button-anim-color: #888;
+  --top-navbar-mobile-breakpoint: 800px; /* Defined separately in js!! */
+  --top-navbar-interbutton-padding: 5px;
+}
+
+.top-navbar-button {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--top-navbar-button-bg-color);
+  padding: 10px;
+}
+.top-navbar-button:not(:first-child) {
+  margin-left: var(--top-navbar-interbutton-padding);
+}
+
+.top-navbar-button-sprite {
+  width: var(--top-navbar-sprite-size);
+  height: var(--top-navbar-sprite-size);
+}
+
+.top-navbar-button-text {
+  padding-left: 5px;
+  font-size: 18px;
+  text-align: center;
+  text-decoration: none;
+  color: var(--top-navbar-text-color);
+}
+
+/**
+ * Top navbar 
+ */
+
+.top-navbar-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 4;
+  width: 100vw;
+  background-color: var(--top-navbar-bg-color);
+  color: var(--top-navbar-text-color);
+}
+.top-navbar-buttons {
+  display: flex;
+}
+.top-navbar-mobile-preview {
+  padding-top: var(--top-navbar-interbutton-padding);
+  display: flex;
+  width: 100%;
+}
+.top-navbar-mobile-preview .text,
+.top-navbar-mobile-preview button {
+  color: var(--top-navbar-text-color);
+  display: flex;
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--top-navbar-button-bg-color);
+  padding: 10px;
+}
+.top-navbar-mobile-preview .text {
+  margin-right: var(--top-navbar-interbutton-padding);
+}
+
+/* Responsiveness */
+@media (max-width: --top-navbar-mobile-breakpoint) {
+  .top-navbar-mobile-preview {
+    display: none;
+  }
 }
